# hangao_generator

./: .gitignore  AGRNTS.md  card_mapping.json  chaogao_creator.py  downloader.py  hangao_generator.spec  main.py  package.bat  package.ps1  pyproject.toml  token.txt  业户信息.xlsx  函告.xls
.claude/: settings.local.json
crawl/: backend.py  downloader.py
ui/: main_window.py  style.py  worker.py
utils/: cache.py  chaogao_creator.py
模板/: 信封模板.docx  函告模板.docx  抄告模版.docx  短信模板.docx
