[project]
name = "hangao-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docxtpl>=0.20.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyinstaller>=6.14.2",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.8.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
